--- a/Prediction_Models_Website/index.html
+++ b/Prediction_Models_Website/index.html
@@ -2,84 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prediction Model Hub</title>
+    <title>My Prediction Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <header>
-        <h1>Prediction Model Hub 🧠</h1>
-        <p>Advanced models to forecast business and career metrics.</p>
-    </header>
+    <h1>Prediction Models</h1>
 
-    <main class="container">
+    <div id="salary-predictor">
+        <h2>Salary Predictor</h2>
+        <p>Enter years of experience to predict salary.</p>
+        <label for="experience">Years of Experience:</label><br>
+        <input type="number" id="experience">
+        <br><br>
+        <button id="predict-salary">Predict Salary</button>
+        <p id="salary-result"></p>
+    </div>
 
-        <div class="card">
-            <h2>Salary Predictor</h2>
-            <p>Enter the years of experience to predict a potential salary.</p>
-            <div class="input-group">
-                <label for="experience">Years of Experience:</label>
-                <input type="number" id="experience" placeholder="e.g., 5" min="0" step="0.1">
-            </div>
-            <button id="predict-salary">Predict Salary</button>
-            <div class="result-box" id="salary-result">
-                <div class="loader-container" style="display: none;">
-                    <div class="loader"></div>
-                </div>
-                <span class="prediction-text"></span>
-            </div>
-        </div>
+    <div id="income-predictor">
+        <h2>Income Predictor</h2>
+        <p>Enter age and experience to predict income.</p>
+        <label for="age">Age:</label><br>
+        <input type="number" id="age">
+        <br>
+        <label for="income-experience">Experience (Years):</label><br>
+        <input type="number" id="income-experience">
+        <br><br>
+        <button id="predict-income">Predict Income</button>
+        <p id="income-result"></p>
+    </div>
 
-        <div class="card">
-            <h2>Income Predictor</h2>
-            <p>Enter age and professional experience to predict income.</p>
-            <div class="input-group">
-                <label for="age">Age:</label>
-                <input type="number" id="age" placeholder="e.g., 40" min="0">
-            </div>
-            <div class="input-group">
-                <label for="income-experience">Experience (Years):</label>
-                <input type="number" id="income-experience" placeholder="e.g., 15" min="0">
-            </div>
-            <button id="predict-income">Predict Income</button>
-            <div class="result-box" id="income-result">
-                <div class="loader-container" style="display: none;">
-                    <div class="loader"></div>
-                </div>
-                <span class="prediction-text"></span>
-            </div>
-        </div>
-
-        <div class="card">
-            <h2>Advertising Sales Predictor</h2>
-            <p>Enter advertising budgets to predict sales units.</p>
-            <div class="input-group">
-                <label for="tv">TV Budget ($):</label>
-                <input type="number" id="tv" placeholder="e.g., 200" min="0">
-            </div>
-            <div class="input-group">
-                <label for="radio">Radio Budget ($):</label>
-                <input type="number" id="radio" placeholder="e.g., 40" min="0">
-            </div>
-            <div class="input-group">
-                <label for="newspaper">Newspaper Budget ($):</label>
-                <input type="number" id="newspaper" placeholder="e.g., 70" min="0">
-            </div>
-            <button id="predict-ad">Predict Sales</button>
-            <div class="result-box" id="ad-result">
-                <div class="loader-container" style="display: none;">
-                    <div class="loader"></div>
-                </div>
-                <span class="prediction-text"></span>
-            </div>
-        </div>
-
-    </main>
-
-    <footer>
-        <p>&copy; 2025 Prediction Model Hub. Powered by AI.</p>
-    </footer>
+    <div id="ad-predictor">
+        <h2>Advertising Sales Predictor</h2>
+        <p>Enter ad budgets to predict sales.</p>
+        <label for="tv">TV Budget ($):</label><br>
+        <input type="number" id="tv">
+        <br>
+        <label for="radio">Radio Budget ($):</label><br>
+        <input type="number" id="radio">
+        <br>
+        <label for="newspaper">Newspaper Budget ($):</label><br>
+        <input type="number" id="newspaper">
+        <br><br>
+        <button id="predict-ad">Predict Sales</button>
+        <p id="ad-result"></p>
+    </div>
 
     <script src="script.js"></script>
 </body>
